--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -51,7 +51,7 @@
                 style="@style/DividerStyleFull" />
 
             <ImageView
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/base_block_margin_top"
                 style="@style/DividerStyleFull" />
 
             <RelativeLayout
@@ -111,7 +111,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/base_block_margin_top"
                 android:scaleType="centerCrop"
                 android:src="@drawable/divider" />
 
@@ -350,7 +350,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/base_block_margin_top"
                 android:scaleType="centerCrop"
                 android:src="@drawable/divider" />
 
@@ -410,7 +410,7 @@
                 style="@style/ValidationErrorTextView" />
 
             <ImageView
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/base_block_margin_top"
                 style="@style/DividerStyleFull" />
             <LinearLayout
                 android:layout_width="match_parent"
