--- a/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_address_edit_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_address_edit_text.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
-    android:hint="@string/phone"
+    android:hint="@string/address"
     xmlns:android="http://schemas.android.com/apk/res/android" />
