--- a/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_email_edit_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_email_edit_text.xml
@@ -3,5 +3,6 @@
     style="@style/DiveCenterProfileEditText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="10dp"
     android:hint="@string/email"
     xmlns:android="http://schemas.android.com/apk/res/android" />
