--- a/trunk/ddscanner/app/src/main/res/layout/edit_dc_profile_view.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dc_profile_view.xml
@@ -10,7 +10,7 @@
         <import type="java.lang.String" />
 
         <variable
-            name="profileFragmentViewModel"
+            name="dcViewModel"
             type="com.ddscanner.screens.profile.edit.EditDiveCenterProfileActivityViewModel" />
 
         <variable
@@ -66,6 +66,7 @@
                                     android:layout_height="match_parent"
                                     android:scaleType="center"
                                     android:src="@drawable/ic_attach_camera"
+                                    app:loadImageFrom="@{dcViewModel}"
                                     android:onClick="@{handlers::changePhotoButtonCLicked}"/>
                             </LinearLayout>
                         </RelativeLayout>
@@ -82,7 +83,7 @@
                                 android:layout_height="wrap_content"
                                 android:id="@+id/name"
                                 android:hint="@string/name"
-                                android:text="@{profileFragmentViewModel.diveCenterProfile.name}"/>
+                                android:text="@{dcViewModel.diveCenterProfile.name}"/>
 
                         </LinearLayout>
                     </LinearLayout>
