--- a/trunk/ddscanner/app/src/main/res/layout/activity_edit_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_edit_profile.xml
@@ -271,12 +271,14 @@
                     <ImageView style="@style/DividerStyleFull" />
 
                     <RelativeLayout
+                        android:visibility="gone"
                         android:id="@+id/choose_dive_center_btn"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:paddingLeft="15dp">
+                        android:paddingLeft="15dp"
+                        android:onClick="@{handlers::chooseDiveCenter}">
 
                         <TextView
                             android:layout_width="wrap_content"
