--- a/trunk/ddscanner/app/src/main/res/layout/spinner_level_first_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/spinner_level_first_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp">
+    android:paddingTop="5dp"
+    android:paddingBottom="15dp">
     <TextView
         android:text="@string/diver_level"
         android:layout_width="wrap_content"
