--- a/trunk/ddscanner/app/src/main/res/layout/item_instructor.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_instructor.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="60dp">
     <ImageView
+        android:id="@+id/avatar"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/avatar_checkin"
@@ -11,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="59dp"
             style="@style/ListTextStyle"
