--- a/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
@@ -32,6 +32,20 @@
             android:paddingRight="15dp">
 
             <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:background="@android:color/transparent"
+                android:gravity="center_vertical"
+                android:hint="@string/name_register"
+                android:inputType="textPassword"
+                android:lines="1"
+                android:textColor="@color/black_text"
+                android:textColorHint="#a3a3a3" />
+
+            <ImageView style="@style/DividerStyleFull" />
+            
+            <EditText
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
@@ -42,6 +56,7 @@
                 android:lines="1"
                 android:textColor="@color/black_text"
                 android:textColorHint="#a3a3a3" />
+
 
             <ImageView style="@style/DividerStyleFull" />
 
